# linera-dynamic-template

./: .gitignore  LICENSE  README.md  next.config.ts  package.json  pnpm-lock.yaml
.agent/rules/: auto-commit-push-workflow.md  use-pnpm.md
.cursor/rules/: no-auto-start-dev-server.mdc  shell-preferences.mdc  ui-color-prefer-non-purple-primary.mdc  use-bun-package-manager.mdc
.kiro/hooks/: auto-commit-push.kiro.hook
.kiro/settings/: mcp.json
chat-context/: 1-wagmi-rainbowkit-migration.md
contracts/: README.md
contracts/counter/: Cargo.toml
contracts/counter/src/: contract.rs  lib.rs  service.rs  state.rs
contracts/counter/tests/: single_chain.rs
scripts/: deploy-contract.ts
src/app/: layout.tsx  page.tsx
src/components/: counter-app.tsx  rainbow-provider.tsx
src/lib/: linera-adapter.ts
